--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>ru.abramov.cloud-storage</groupId>
     <artifactId>ab-cloud-storage</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
     <build>
@@ -21,6 +22,10 @@
             </plugin>
         </plugins>
     </build>
+    <modules>
+        <module>client</module>
+        <module>server</module>
+    </modules>
 
     <dependencies>
 
